chages in button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
   <!-- Шапка -->
-<span>
+<main>
   <header>
     <h3><a href="">WebStudio</a></h3>
     <ul>
@@ -19,78 +19,77 @@
     <a href="">info@devstudio.com</a>
     <a href="tel:+380961111111">+38 096 111 11 11</a>
   </header>
-</span>
+  
+  <!-- Інформація з замовлення послуг -->
+  <span>
+    <h1>Єфективні рішення для вашого бізнесу</h1>
+    <button>Замовити послугу</button>
+  </span>
+  
+  <!-- Особливості -->
+  <span>
+    <div>
+      <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
+      <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+    </div>
+    <div>
+      <h4>ПУНКТУАЛЬНІСТЬ</h4>
+      <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+    </div>
+    <div>
+      <h4>ПЛАНУВАННЯ</h4>
+      <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+    </div>
+    <div>
+      <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
+      <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+    </div>
+  </span>
+  
+  <!-- Чим ми займаємось -->
+  <span>
+    <h2>Чим ми займаємось</h2>
+    <img src="/homeworke_1/img/box 1.jpg" alt="picture 1">
+    <img src="/homeworke_1/img/box 2.jpg" alt="picture 2">
+    <img src="/homeworke_1/img/box 3.jpg" alt="picture 3">
+  </span>
+  
+  <!-- Наша команда -->
+  <span>
+    <h2>Наша команда</h2>
+    <figure>
+      <img src="/homeworke_1/img/foto 1.jpg" alt="foto 1">
+      <figcaption>Ігор Дем'яненко</figcaption>
+      <figcaption>Product Designer</figcaption>
+    </figure>
+    <figure>
+      <img src="/homeworke_1/img/foto 2.jpg" alt="foto 2">
+      <figcaption>Ольга Рєпіна</figcaption>
+      <figcaption>Frontend Developer</figcaption>
+    </figure>
+    <figure>
+      <img src="/homeworke_1/img/foto 3.jpg" alt="foto 3">
+      <figcaption>Микола Тарасов</figcaption>
+      <figcaption>Marketing</figcaption>
+    </figure>
+    <figure>
+      <img src="/homeworke_1/img/foto 4.jpg" alt="foto4">
+      <figcaption>Михайло Єрмаков</figcaption>
+      <figcaption>UI Designer</figcaption>
+    </figure>
+  </span>
+  
+  <!-- Підвал -->
+  <div>
+    <div>
+      <h3><a href="">WebStudio</a></h3>
+    </div>
+    <div>
+      <p>м. Київ, пр-т Лесі Українки, 26</p>
+      <a href="">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
+  </div>
+</main>
 
-<!-- Інформація з замовлення послуг -->
-<span>
-<h1>Єфективні рішення для вашого бізнесу</h1>
-<button>
-  <a href="">Замовити послугу</a>
-</button>
-</span>
-
-<!-- Особливості -->
-<span>
-  <div>
-    <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
-    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-  </div>
-  <div>
-    <h4>ПУНКТУАЛЬНІСТЬ</h4>
-    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-  </div>
-  <div>
-    <h4>ПЛАНУВАННЯ</h4>
-    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-  </div>
-  <div>
-    <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
-    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-  </div>
-</span>
-
-<!-- Чим ми займаємось -->
-<span>
-  <h2>Чим ми займаємось</h2>
-  <img src="/homeworke_1/img/box 1.jpg" alt="picture 1">
-  <img src="/homeworke_1/img/box 2.jpg" alt="picture 2">
-  <img src="/homeworke_1/img/box 3.jpg" alt="picture 3">
-</span>
-
-<!-- Наша команда -->
-<span>
-  <h2>Наша команда</h2>
-  <figure>
-    <img src="/homeworke_1/img/foto 1.jpg" alt="foto 1">
-    <figcaption>Ігор Дем'яненко</figcaption>
-    <figcaption>Product Designer</figcaption>
-  </figure>
-  <figure>
-    <img src="/homeworke_1/img/foto 2.jpg" alt="foto 2">
-    <figcaption>Ольга Рєпіна</figcaption>
-    <figcaption>Frontend Developer</figcaption>
-  </figure>
-  <figure>
-    <img src="/homeworke_1/img/foto 3.jpg" alt="foto 3">
-    <figcaption>Микола Тарасов</figcaption>
-    <figcaption>Marketing</figcaption>
-  </figure>
-  <figure>
-    <img src="/homeworke_1/img/foto 4.jpg" alt="foto4">
-    <figcaption>Михайло Єрмаков</figcaption>
-    <figcaption>UI Designer</figcaption>
-  </figure>
-</span>
-
-<!-- Підвал -->
-<div>
-  <div>
-    <h3><a href="">WebStudio</a></h3>
-  </div>
-  <div>
-    <p>м. Київ, пр-т Лесі Українки, 26</p>
-    <a href="">info@devstudio.com</a>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
-  </div>
-</div>
 </html>
