change way to all .img

--- a/index.html
+++ b/index.html
@@ -49,31 +49,31 @@
   <!-- Чим ми займаємось -->
   <span>
     <h2>Чим ми займаємось</h2>
-    <img src="/homeworke_1/img/box 1.jpg" alt="picture 1">
-    <img src="/homeworke_1/img/box 2.jpg" alt="picture 2">
-    <img src="/homeworke_1/img/box 3.jpg" alt="picture 3">
+    <img src="/img/box 1.jpg" alt="box1">
+    <img src="/img/box 2.jpg" alt="box2">
+    <img src="/img/box 3.jpg" alt="box3">
   </span>
   
   <!-- Наша команда -->
   <span>
     <h2>Наша команда</h2>
     <figure>
-      <img src="/homeworke_1/img/foto 1.jpg" alt="foto 1">
+      <img src="/img/foto 1.jpg" alt="foto 1">
       <figcaption>Ігор Дем'яненко</figcaption>
       <figcaption>Product Designer</figcaption>
     </figure>
     <figure>
-      <img src="/homeworke_1/img/foto 2.jpg" alt="foto 2">
+      <img src="/img/foto 2.jpg" alt="foto 2">
       <figcaption>Ольга Рєпіна</figcaption>
       <figcaption>Frontend Developer</figcaption>
     </figure>
     <figure>
-      <img src="/homeworke_1/img/foto 3.jpg" alt="foto 3">
+      <img src="/img/foto 3.jpg" alt="foto 3">
       <figcaption>Микола Тарасов</figcaption>
       <figcaption>Marketing</figcaption>
     </figure>
     <figure>
-      <img src="/homeworke_1/img/foto 4.jpg" alt="foto4">
+      <img src="/img/foto 4.jpg" alt="foto4">
       <figcaption>Михайло Єрмаков</figcaption>
       <figcaption>UI Designer</figcaption>
     </figure>
