зміна назв фото

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <!-- Чим ми займаємось -->
   <span>
     <h2>Чим ми займаємось</h2>
-    <img src="/img/box1.jpg" alt="box1">
-    <img src="/img/box2.jpg" alt="box2">
-    <img src="/img/box3.jpg" alt="box3">
+    <img src="/img/box1.jpg" alt="написание кода">
+    <img src="/img/box2.jpg" alt="разроботка мобильных приложений">
+    <img src="/img/box3.jpg" alt="графический дизайн">
   </span>
   
   <!-- Наша команда -->
