--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </span>
   
   <!-- Особливості -->
-  <span>
+  <div>
     <div>
       <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
       <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -44,7 +44,7 @@
       <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
       <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
     </div>
-  </span>
+  </div>
   
   <!-- Чим ми займаємось -->
   <h2>Чим ми займаємось</h2>
