--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
   </span>
   
   <!-- Особливості -->
-  <span>
-    <span>
+  <div>
+    <div>
       <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
       <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-    </span>
-    <span>
+    </div>
+    <div>
       <h4>ПУНКТУАЛЬНІСТЬ</h4>
       <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-    </span>
-    <span>
+    </div>
+    <div>
       <h4>ПЛАНУВАННЯ</h4>
       <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-    </span>
-    <span>
+    </div>
+    <div>
       <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
       <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-    </span>
-  </span>
+    </div>
+  </div>
   
   <!-- Чим ми займаємось -->
   <h2>Чим ми займаємось</h2>
