--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
   
   <!-- Наша команда -->
   <h2>Наша команда</h2>
-  
     <img src="/img/foto1.jpg" alt="foto 1">
-    <figcaption>Ігор Дем'яненко</figcaption>
-    <figcaption>Product Designer</figcaption>
-  
+    <figure><figcaption>Ігор Дем'яненко</figcaption></figure>
+    <figure><figcaption>Product Designer</figcaption></figure>
+
   <figure>
     <img src="/img/foto2.jpg" alt="foto 2">
     <figcaption>Ольга Рєпіна</figcaption>
