--- a/index.html
+++ b/index.html
@@ -60,21 +60,17 @@
     <figure><figcaption>Ігор Дем'яненко</figcaption></figure>
     <figure><figcaption>Product Designer</figcaption></figure>
 
-  <figure>
     <img src="/img/foto2.jpg" alt="foto 2">
-    <figcaption>Ольга Рєпіна</figcaption>
-    <figcaption>Frontend Developer</figcaption>
-  </figure>
-  <figure>
+    <figure><figcaption>Ольга Рєпіна</figcaption></figure>
+    <figure><figcaption>Frontend Developer</figcaption></figure>
+
     <img src="/img/foto3.jpg" alt="foto 3">
-    <figcaption>Микола Тарасов</figcaption>
-    <figcaption>Marketing</figcaption>
-  </figure>
-  <figure>
+    <figure><figcaption>Микола Тарасов</figcaption></figure>
+    <figure><figcaption>Marketing</figcaption></figure>
+ 
     <img src="/img/foto4.jpg" alt="foto4">
-    <figcaption>Михайло Єрмаков</figcaption>
-    <figcaption>UI Designer</figcaption>
-  </figure>
+    <figure><figcaption>Михайло Єрмаков</figcaption></figure>
+    <figure><figcaption>UI Designer</figcaption></figure>
   
   <!-- Підвал -->
   <div>
