--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="">Портфоліо</a></li>
       <li><a href="">Контакти</a></li>
     </ul>
-    <a href="">info@devstudio.com</a>
+    <a href="mailto:">info@devstudio.com</a>
     <a href="tel:+380961111111">+38 096 111 11 11</a>
   </header>
   
@@ -49,28 +49,36 @@
   <!-- Чим ми займаємось -->
   <h2>Чим ми займаємось</h2>
   <span>
-    <img src="/img/box1.jpg" alt="написание кода">
-    <img src="/img/box2.jpg" alt="разроботка мобильных приложений">
-    <img src="/img/box3.jpg" alt="графический дизайн">
+    <img src="/img/box1.jpg" alt="написание кода" width="150">
+    <img src="/img/box2.jpg" alt="разроботка мобильных приложений" width="150">
+    <img src="/img/box3.jpg" alt="графический дизайн" width="150">
   </span>
   
   <!-- Наша команда -->
   <h2>Наша команда</h2>
-    <img src="/img/foto1.jpg" alt="foto 1">
-    <figure><figcaption>Ігор Дем'яненко</figcaption></figure>
-    <figure><figcaption>Product Designer</figcaption></figure>
+    <figure>
+      <img src="/img/foto1.jpg" alt="foto 1" width="150">
+      <figcaption>Ігор Дем'яненко</figcaption>
+      <figcaption>Product Designer</figcaption>
+    </figure>
 
-    <img src="/img/foto2.jpg" alt="foto 2">
-    <figure><figcaption>Ольга Рєпіна</figcaption></figure>
-    <figure><figcaption>Frontend Developer</figcaption></figure>
+    <figure>
+      <img src="/img/foto2.jpg" alt="foto 2" width="150">
+      <figcaption>Ольга Рєпіна</figcaption>
+      <figcaption>Frontend Developer</figcaption>
+    </figure>
 
-    <img src="/img/foto3.jpg" alt="foto 3">
-    <figure><figcaption>Микола Тарасов</figcaption></figure>
-    <figure><figcaption>Marketing</figcaption></figure>
+    <figure>
+      <img src="/img/foto3.jpg" alt="foto 3" width="150">
+      <figcaption>Микола Тарасов</figcaption>
+      <figcaption>Marketing</figcaption>
+    </figure>
  
-    <img src="/img/foto4.jpg" alt="foto4">
-    <figure><figcaption>Михайло Єрмаков</figcaption></figure>
-    <figure><figcaption>UI Designer</figcaption></figure>
+    <figure>
+      <img src="/img/foto4.jpg" alt="foto4" width="150">
+      <figcaption>Михайло Єрмаков</figcaption>
+      <figcaption>UI Designer</figcaption>
+    </figure>
   
   <!-- Підвал -->
   <div>
@@ -79,10 +87,9 @@
     </div>
     <div>
       <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <a href="">info@devstudio.com</a>
+      <a href="mailto:">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
   </div>
 </main>
-
 </html>
