--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 
   <!-- Шапка -->
-<main>
-  <header>
-    <h3><a href="">WebStudio</a></h3>
-    <ul>
-      <li><a href="">Студія</a></li>
-      <li><a href="">Портфоліо</a></li>
-      <li><a href="">Контакти</a></li>
-    </ul>
-    <a href="mailto:">info@devstudio.com</a>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
-  </header>
+<header>
+  <h3><a href="">WebStudio</a></h3>
+  <ul>
+    <li><a href="">Студія</a></li>
+    <li><a href="">Портфоліо</a></li>
+    <li><a href="">Контакти</a></li>
+  </ul>
+  <a href="mailto:">info@devstudio.com</a>
+  <a href="tel:+380961111111">+38 096 111 11 11</a>
+</header>
   
   <!-- Інформація з замовлення послуг -->
+<main>
   <h1>Єфективні рішення для вашого бізнесу</h1>
   <span>
     <button>Замовити послугу</button>
@@ -79,17 +79,13 @@
       <figcaption>Михайло Єрмаков</figcaption>
       <figcaption>UI Designer</figcaption>
     </figure>
+</main>
   
   <!-- Підвал -->
-  <div>
-    <div>
+<footer>
       <h3><a href="">WebStudio</a></h3>
-    </div>
-    <div>
       <p>м. Київ, пр-т Лесі Українки, 26</p>
       <a href="mailto:">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </div>
-  </div>
-</main>
+</footer>
 </html>
