--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <li><a href="">Портфоліо</a></li>
     <li><a href="">Контакти</a></li>
   </ul>
-  <a href="mailto:">info@devstudio.com</a>
-  <a href="tel:+380961111111">+38 096 111 11 11</a>
+  <address>
+    <a href="mailto:">info@devstudio.com</a>
+    <a href="tel:+380961111111">+38 096 111 11 11</a>
+  </address>
+  
 </header>
   
   <!-- Інформація з замовлення послуг -->
