--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 <footer>
       <h3><a href="">WebStudio</a></h3>
       <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <a href="mailto:">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address>
+        <a href="mailto:">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
 </footer>
 </html>
