--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
   <!-- Шапка -->
 <header>
-  <h3><a href="">WebStudio</a></h3>
-  <ul>
-    <li><a href="">Студія</a></li>
-    <li><a href="">Портфоліо</a></li>
-    <li><a href="">Контакти</a></li>
-  </ul>
+  <h3><a href="/">WebStudio</a></h3>
+  <nav>
+    <ul>
+      <li><a href="/">Студія</a></li>
+      <li><a href="/">Портфоліо</a></li>
+      <li><a href="/">Контакти</a></li>
+    </ul>
+  </nav>
   <address>
     <a href="mailto:">info@devstudio.com</a>
     <a href="tel:+380961111111">+38 096 111 11 11</a>
   </address>
-  
 </header>
   
   <!-- Інформація з замовлення послуг -->
@@ -86,7 +87,7 @@
   
   <!-- Підвал -->
 <footer>
-      <h3><a href="">WebStudio</a></h3>
+      <h3><a href="/">WebStudio</a></h3>
       <p>м. Київ, пр-т Лесі Українки, 26</p>
       <address>
         <a href="mailto:">info@devstudio.com</a>
