--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
   <!-- Наша команда -->
   <h2>Наша команда</h2>
     <figure>
-      <img src="/img/foto1.jpg" alt="foto 1" width="150">
+      <img src="/img/foto1.jpg" alt="Frontend Developer Ігор Дем'яненко" width="150">
       <figcaption>Ігор Дем'яненко</figcaption>
       <figcaption>Product Designer</figcaption>
     </figure>
 
     <figure>
-      <img src="/img/foto2.jpg" alt="foto 2" width="150">
+      <img src="/img/foto2.jpg" alt="Backend Developer Ольга Рєпіна" width="150">
       <figcaption>Ольга Рєпіна</figcaption>
       <figcaption>Frontend Developer</figcaption>
     </figure>
 
     <figure>
-      <img src="/img/foto3.jpg" alt="foto 3" width="150">
+      <img src="/img/foto3.jpg" alt="Grafic Designer Микола Тарасов" width="150">
       <figcaption>Микола Тарасов</figcaption>
       <figcaption>Marketing</figcaption>
     </figure>
  
     <figure>
-      <img src="/img/foto4.jpg" alt="foto4" width="150">
+      <img src="/img/foto4.jpg" alt="QA Engigeer Михайло Єрмаков" width="150">
       <figcaption>Михайло Єрмаков</figcaption>
       <figcaption>UI Designer</figcaption>
     </figure>
