--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   <!-- Інформація з замовлення послуг -->
 <main>
   <h1>Єфективні рішення для вашого бізнесу</h1>
-  <span>
-    <button>Замовити послугу</button>
-  </span>
+  
+  <button type="button" name="Замовити послуги">Замовити послуги</button>
   
   <!-- Особливості -->
   <div>
