--- a/index.html
+++ b/index.html
@@ -36,21 +36,22 @@
   
   <!-- Особливості -->
   <section>
+    <h2></h2>
     <ul>
       <li>
-        <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
+        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
       </li>
       <li>
-        <h4>ПУНКТУАЛЬНІСТЬ</h4>
+        <h3>ПУНКТУАЛЬНІСТЬ</h3>
         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
       </li>
       <li>
-        <h4>ПЛАНУВАННЯ</h4>
+        <h3>ПЛАНУВАННЯ</h3>
         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
       </li>
       <li>
-        <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
+        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
       </li>
     </ul>  
@@ -72,22 +73,22 @@
     <ul>
       <li>
         <img src="./img/foto1.jpg" alt="Product Designer Ігор Дем'яненко" width="270" height="260">
-        <p>Ігор Дем'яненко</p>
+        <h3>Ігор Дем'яненко</h3>
         <p>Product Designer</p>
       </li>
       <li>
         <img src="./img/foto2.jpg" alt="Frontend Developer Ольга Рєпіна" width="270" height="260">
-        <p>Ольга Рєпіна</p>
+        <h3>Ольга Рєпіна</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
         <img src="./img/foto3.jpg" alt="Marketing Микола Тарасов" width="270" height="260">
-        <p>Микола Тарасов</p>
+        <h3>Микола Тарасов</h3>
         <p>Marketing</p>
       </li>
       <li>
         <img src="./img/foto4.jpg" alt="UI Designer Михайло Єрмаков" width="270" height="260">
-        <p>Михайло Єрмаков</p>
+        <h3>Михайло Єрмаков</h3>
         <p>UI Designer</p>
       </li>
     </ul>
