--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
   <!-- Особливості -->
   <section>
-    <h2></h2>
+    <h2>Заголовок який буде видалений</h2>
     <ul>
       <li>
         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
